--- a/styles.css
+++ b/styles.css
@@ -7,16 +7,22 @@ header {
     text-align: center;
 }
 
+img {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+ul {
+    list-style-type: square;
+    padding-left: 2vw;
+    padding-right: 2vw;
+}
+
 @media (min-width: 800px) {
     .container {
         margin: auto;
         max-width: 80%;
     }
-}
-
-img {
-    max-width: 100%;
-    max-height: 100%;
 }
 
 .profile-image {
@@ -48,6 +54,14 @@ img {
     font-size: 12px;
 }
 
+.project-image {
+    display: block;
+    margin: auto;
+    margin-top: 2vh;
+    max-width: 100%;
+    max-height: 50%;
+}
+
 @media (min-width: 800px) {
     .project-container {
         display: grid;
@@ -69,7 +83,7 @@ img {
     .project-image {
         display: block;
         margin: auto;
-        margin-top: 1vh;
+        margin-top: 2vh;
         max-width: 100%;
         max-height: 50%;
     }
