--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,8 @@ img {
 
 ul {
     list-style-type: square;
-    padding-left: 2vw;
-    padding-right: 2vw;
+    padding-left: 2%;
+    padding-right: 2%;
 }
 
 @media (min-width: 800px) {
@@ -52,6 +52,7 @@ ul {
     margin-top: 1vh;
     padding: 2%;
     font-size: 12px;
+    box-shadow: inset 0 2px 4px 0 hsla(0, 0%, 0%, 0.08);
 }
 
 .project-image {
