--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,15 @@ header {
     text-align: center;
 }
 
+footer {
+    margin-top: 1vh;
+    height: 50px;
+    text-align: center;
+    vertical-align: middle;
+    line-height: 50px;
+    font-size: 12px;
+}
+
 img {
     max-width: 100%;
     max-height: 100%;
