Change horizontal rule styling

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,13 @@ ul {
     padding-right: 2%;
 }
 
+hr {
+    border: 0;
+    height: 0;
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+}
+
 @media (min-width: 800px) {
     .container {
         margin: auto;
