--- a/styles.css
+++ b/styles.css
@@ -82,8 +82,9 @@ hr {
 @media (min-width: 800px) {
     .project-container {
         display: grid;
-        grid-template-columns: 50% 50%;
-        grid-column-gap: 1vmin;
+        grid-template-columns: 49.5% 49.5%;
+        column-gap: 1%;
+        row-gap: 1%;
         grid-row: auto;
     }
 
