--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,10 @@ hr {
     box-shadow: inset 0 2px 4px 0 hsla(0, 0%, 0%, 0.08);
 }
 
+.project-subheading {
+    color: hsl(0, 0%, 30%);
+}
+
 .project-image {
     display: block;
     margin: auto;
