--- a/styles.css
+++ b/styles.css
@@ -1,132 +1,122 @@
 body {
-    font-family: 'Nunito', sans-serif;
-    background-color: #f0f3f7;
+  font-family: "Nunito", sans-serif;
+  background-color: #f0f3f7;
 }
-
 header {
-    text-align: center;
+  text-align: center;
 }
-
 footer {
-    margin-top: 1vh;
-    height: 50px;
-    text-align: center;
-    vertical-align: middle;
-    line-height: 50px;
-    font-size: 12px;
+  margin-top: 1vh;
+  height: 50px;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
+  font-size: 12px;
 }
-
-img {
-    max-width: 100%;
-    max-height: 100%;
-}
-
 ul {
-    list-style-type: square;
-    padding-left: 2%;
-    padding-right: 2%;
+  list-style-type: square;
+  padding-left: 2%;
+  padding-right: 2%;
 }
-
 hr {
-    border: 0;
-    height: 0;
-    border-top: 1px solid rgba(0, 0, 0, 0.3);
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  border: 0;
+  height: 0;
+  border-top: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
-
-@media (min-width: 800px) {
-    .container {
-        margin: auto;
-        max-width: 90%;
-    }
+.profile .image {
+  max-height: 100px;
+  max-width: 100px;
 }
-
-.profile-image {
-    max-height: 100px;
-    max-width: 100px;
+.profile .links-container {
+  display: flex;
+  justify-content: space-evenly;
+  max-width: 100vw;
 }
-
-.profile-image-container {
-    max-width: 100vw;
-    max-height: 100vh;
+.profile .about-me {
+  font-size: 12px;
 }
-
-.links-container {
-    display: flex;
-    justify-content: space-evenly;
-    max-width: 100vw;
+.project {
+  border-top: 2px solid #ea86ae;
+  background-color: #fff;
+  min-height: 400px;
+  margin-top: 2vh;
+  padding: 2%;
+  font-size: 12px;
+  border-radius: 2px;
+  box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
 }
-
-.about-me {
-    font-size: 12px;
+.project .repo-link {
+  color: #68b0f1;
 }
-
-.project-item {
-    border-top: 2px solid #ea86ae;
-    background-color: #ffffff;
-    min-height: 400px;
+.project .demo-link {
+  color: #5fc383;
+}
+.project .tag {
+  font-size: 12px;
+  font-weight: 400;
+  padding: 5px 15px;
+  border-radius: 3px;
+  vertical-align: text-top;
+  display: inline-block;
+  white-space: nowrap;
+  background-color: #ea86ae;
+  color: #fff;
+}
+@media (min-width: 1080px) {
+  .container {
+    margin: auto;
+    max-width: 90%;
+  }
+  .projects {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 1%;
+    row-gap: 1%;
+    grid-row: auto;
+  }
+  .project {
+    align-items: center;
+    height: 450px;
+    grid-row: auto;
     margin-top: 1vh;
-    padding: 2%;
-    font-size: 12px;
-    border-radius: 2px;
-    box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
-}
-
-.project-subheading {
-    color: hsl(0, 0%, 30%);
-}
-
-.project-image {
+  }
+  .project .image {
     display: block;
     margin: auto;
     margin-top: 2vh;
     max-width: 100%;
-    max-height: 75%;
+    max-height: 60%;
+  }
 }
-
-@media (min-width: 1080px) {
-    .project-container {
-        display: grid;
-        grid-template-columns: 1fr 1fr;
-        column-gap: 1%;
-        row-gap: 1%;
-        grid-row: auto;
-    }
-
-    .project-item {
-        background-color: #ffffff;
-        align-items: center;
-        height: 450px;
-        grid-row: auto;
-        margin-top: 1vh;
-        padding: 2%;
-        font-size: 12px;
-    }
-
-    .project-image {
-        margin: auto;
-        margin-top: 2vh;
-        max-width: 100%;
-        max-height: 60%;
-    }
+a {
+  color: grey;
+  text-decoration: none;
+  border-bottom: dotted 2px;
 }
-
-.repo-link {
-    color:#68b0f1;
+a:hover {
+  text-decoration: none;
+  border-bottom: solid 2px;
 }
-
-.demo-link {
-    color: #5fc383;
+h1,
+h2,
+h3,
+h4 {
+  margin: auto;
+  font-weight: 150;
 }
-
-.tag {
-    font-size: 12px;
-    font-weight: 400;
-    padding: 5px 15px;
-    border-radius: 3px;
-    vertical-align: text-top;
-    display: inline-block;
-    white-space: nowrap;
-    background-color:#ea86ae;
-    color: #fff;
+h1 {
+  font-size: 24px;
+  font-weight: 400;
+}
+h2 {
+  font-size: 20px;
+  font-weight: 400;
+}
+h3 {
+  font-size: 18px;
+  font-weight: 600;
+}
+p {
+  margin: auto;
 }
