--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@ ul {
   list-style-type: square;
   padding-left: 2%;
   padding-right: 2%;
+  font-size: 14px;
 }
 hr {
   border: 0;
@@ -34,7 +35,7 @@ hr {
   max-width: 100vw;
 }
 .profile .about-me {
-  font-size: 12px;
+  font-size: 14px;
 }
 .project {
   border-top: 2px solid #ea86ae;
@@ -42,7 +43,7 @@ hr {
   min-height: 400px;
   margin-top: 2vh;
   padding: 2%;
-  font-size: 12px;
+  font-size: 14px;
   border-radius: 2px;
   box-shadow: 0 4px 6px 0 rgba(0, 0, 0, 0.2);
 }
@@ -53,7 +54,6 @@ hr {
   color: #5fc383;
 }
 .project .tag {
-  font-size: 12px;
   font-weight: 400;
   padding: 5px 15px;
   border-radius: 3px;
@@ -77,7 +77,7 @@ hr {
   }
   .project {
     align-items: center;
-    height: 450px;
+    height: 525px;
     grid-row: auto;
     margin-top: 1vh;
   }
@@ -86,7 +86,7 @@ hr {
     margin: auto;
     margin-top: 2vh;
     max-width: 100%;
-    max-height: 60%;
+    max-height: 55%;
   }
 }
 a {
@@ -117,6 +117,10 @@ h3 {
   font-size: 18px;
   font-weight: 600;
 }
+h4 {
+  font-size: 16px;
+}
 p {
   margin: auto;
+  font-size: 14px;
 }
