--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,10 @@ footer {
   line-height: 50px;
   font-size: 12px;
 }
+img {
+  max-width: 100%;
+  max-height: 100%;
+}
 ul {
   list-style-type: square;
   padding-left: 2%;
