Increase font size for contact links

--- a/styles.scss
+++ b/styles.scss
@@ -55,6 +55,7 @@ hr {
         display: flex;
         justify-content: space-evenly;
         max-width: 100vw;
+        font-size: 20px;
     }
 
     .about-me {
