--- a/styles.css
+++ b/styles.css
@@ -37,6 +37,7 @@ hr {
   display: flex;
   justify-content: space-evenly;
   max-width: 100vw;
+  font-size: 20px;
 }
 .profile .about-me {
   font-size: 14px;
