--- a/styles.scss
+++ b/styles.scss
@@ -67,7 +67,7 @@ hr {
     border-top: 2px solid $pink;
     background-color: $white;
     margin-top: 2vh;
-    padding: 2%;
+    padding: 3%;
     font-size: 14px;
     border-radius: 2px;
     box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
@@ -75,6 +75,7 @@ hr {
     .image {
         display: block;
         margin: auto;
+        margin-top: 1vh;
     }
 
     .repo-link {
