--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,29 @@ hr {
   border-top: 1px solid rgba(0, 0, 0, 0.3);
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
 }
+.dark-theme-button {
+  display: flex;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: none;
+  outline: none;
+  background-color: #ea86ae;
+  color: white;
+  opacity: 0.5;
+  cursor: pointer;
+  border-radius: 10px;
+  font-size: 50px;
+  width: 50px;
+  height: 50px;
+  line-height: 52px;
+  justify-content: center;
+  align-items: center;
+}
+.dark-theme-button:hover {
+  opacity: 1;
+}
 .profile .image {
   max-height: 100px;
   max-width: 100px;
