--- a/styles.scss
+++ b/styles.scss
@@ -58,6 +58,31 @@ hr {
 // End tag styling
 
 // Custom element styling
+.dark-theme-button {
+    display: flex;
+    position: fixed; 
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    border: none;
+    outline: none;
+    background-color: $pink;
+    color: white;
+    opacity: 0.5;
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 50px;
+    width: 50px;
+    height: 50px;
+    line-height: 52px;
+    justify-content: center;
+    align-items: center;
+}
+
+.dark-theme-button:hover {
+    opacity: 1;
+}
+
 .profile {
     .image {
         max-height: 100px;
