--- a/styles.scss
+++ b/styles.scss
@@ -114,6 +114,7 @@ hr {
         display: block;
         margin: auto;
         margin-top: 1vh;
+        max-height: 20%;
     }
 
     .demo-link {
