Improve sizing of images on mobile

--- a/styles.css
+++ b/styles.css
@@ -83,7 +83,7 @@ hr {
   display: block;
   margin: auto;
   margin-top: 1vh;
-  max-height: 20%;
+  max-height: 25vh;
 }
 .card .demo-link {
   font-size: 16px;
