--- a/styles.scss
+++ b/styles.scss
@@ -114,7 +114,7 @@ hr {
         display: block;
         margin: auto;
         margin-top: 1vh;
-        max-height: 20%;
+        max-height: 25vh;
     }
 
     .demo-link {
