--- a/styles.scss
+++ b/styles.scss
@@ -77,6 +77,10 @@ hr {
     line-height: 52px;
     justify-content: center;
     align-items: center;
+
+    img {
+        filter: invert(1);
+    }
 }
 
 .dark-theme-button:hover {
