--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,8 @@ hr {
 }
 .profile .about-me {
   font-size: 14px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .card {
   border-top: 2px solid #ea86ae;
