--- a/styles.scss
+++ b/styles.scss
@@ -162,6 +162,30 @@ hr {
     color: white;
 }
 
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+
+    .content {
+        @extend .card;
+        margin: auto;
+        width: 50%;
+        height: 60%;
+
+        .image {
+            max-height: 350px !important;
+        }
+    }
+}
+
 @media (min-width: $tablet-breakpoint) {
     .container {
         margin: auto;
