--- a/styles.scss
+++ b/styles.scss
@@ -155,6 +155,7 @@ hr {
 .card:hover {
     transform: scale(1.025);
     box-shadow: 0 8px 10px 0 hsla(0, 0%, 0%, 0.2);
+    cursor: pointer;
 }
 
 .card.dark {
@@ -187,6 +188,7 @@ hr {
 
     .content:hover {
         transform: none;
+        cursor: auto;
     }
 
     .close {
