--- a/styles.scss
+++ b/styles.scss
@@ -180,6 +180,8 @@ hr {
         margin: auto;
         width: 50%;
         height: 60%;
+        animation-name: animatetop;
+        animation-duration: 0.5s;
 
         .image {
             max-height: 350px !important;
@@ -200,6 +202,11 @@ hr {
     .close:hover,
     .close:focus {
         cursor: pointer;
+    }
+
+    @keyframes animatetop {
+        from {top: -300px; opacity: 0}
+        to {top: 0; opacity: 1}
     }
 }
  
