--- a/styles.css
+++ b/styles.css
@@ -129,19 +129,17 @@ hr {
   display: none;
   position: fixed;
   z-index: 1;
-  padding-top: 100px;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
+  padding-top: 5vh;
   background-color: #000;
   background-color: rgba(0, 0, 0, 0.4);
 }
 .modal .content {
   margin: auto;
   width: 50%;
-  height: 60%;
-  overflow-y: scroll;
   animation-name: animatetop;
   animation-duration: 0.5s;
 }
