--- a/styles.scss
+++ b/styles.scss
@@ -161,11 +161,11 @@ hr {
     display: none;
     position: fixed;
     z-index: 1;
-    padding-top: 100px;
     left: 0;
     top: 0;
     width: 100%;
     height: 100%;
+    padding-top: 5vh;
     background-color: rgb(0,0,0);
     background-color: rgba(0,0,0,0.4);
 
@@ -173,8 +173,6 @@ hr {
         @extend .card;
         margin: auto;
         width: 50%;
-        height: 60%;
-        overflow-y: scroll;
         animation-name: animatetop;
         animation-duration: 0.5s;
 
