--- a/styles.scss
+++ b/styles.scss
@@ -173,6 +173,8 @@ hr {
         @extend .card;
         margin: auto;
         width: 50%;
+        max-height: 75vh;
+        overflow-y: scroll;
         animation-name: animatetop;
         animation-duration: 0.5s;
 
