--- a/styles.scss
+++ b/styles.scss
@@ -3,6 +3,7 @@ $tablet-breakpoint: 1080px;
 // Light theme
 $white: #fff;
 $off-white: #f0f3f7;
+$dark-grey: #606060;
 $pink: #ea86ae;
 $blue: #68b0f1;
 $green: #5fc383;
@@ -289,18 +290,28 @@ hr {
 
 // Font styling
 a {
-    color: grey;
+    color: $dark-grey;
     text-decoration: none; 
-    border-bottom: dotted 2px;
+    border-bottom: dotted 1.5px;
 }
 
 a:hover {
     text-decoration: none; 
-    border-bottom: solid 2px;
+    border-bottom: solid 1.5px;
 }
 
 a.dark {
-    color: $smoke;
+    color: white;
+}
+
+p {
+    a {
+        color: black;
+        border-bottom: dotted 1.5px;
+    }
+    a.dark {
+        color: white;
+    }
 }
 
 h1, h2, h3, h4 {
@@ -310,7 +321,7 @@ h1, h2, h3, h4 {
 
 h1 {
     font-size: 24px;
-    font-weight: 400;
+    font-weight: 575;
 }
 
 h2 {
