--- a/styles.scss
+++ b/styles.scss
@@ -176,8 +176,6 @@ hr {
         width: 50%;
         max-height: 75vh;
         overflow-y: scroll;
-        animation-name: animatetop;
-        animation-duration: 0.5s;
 
         .image {
             max-height: 350px !important;
@@ -199,11 +197,6 @@ hr {
     .close:focus {
         cursor: pointer;
     }
-
-    @keyframes animatetop {
-        from {top: -300px; opacity: 0}
-        to {top: 0; opacity: 1}
-    }
 }
  
 @media (min-width: $tablet-breakpoint) {
@@ -213,8 +206,8 @@ hr {
     }
 
     .card:hover {
-        transform: scale(1.025);
-        box-shadow: 0 8px 10px 0 hsla(0, 0%, 0%, 0.2);
+        box-shadow: 0 10px 12px 0 hsla(0, 0%, 0%, 0.2);
+        transition: box-shadow 0.3s ease-in-out;
         cursor: pointer;
     }
 
