--- a/styles.scss
+++ b/styles.scss
@@ -117,6 +117,7 @@ hr {
     border-radius: 2px;
     box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
     transition: transform .2s;
+    position: relative;
 
     .image {
         display: block;
@@ -268,6 +269,7 @@ hr {
             height: 475px;
             grid-row: auto;
             margin-top: 0.25vh;
+            position: relative;
     
             .image {
                 display: block;
@@ -275,6 +277,11 @@ hr {
                 margin-top: 2vh;
                 max-width: 100%;
                 height: 250px;
+            }
+
+            .tags {
+                position: absolute;
+                bottom: 3vh;
             }
         }    
     }
