--- a/styles.scss
+++ b/styles.scss
@@ -343,3 +343,21 @@ p {
     font-size: 15px;
 }
 // End font styling
+
+// Scrollbar styling
+::-webkit-scrollbar {
+    width: 10px;
+}
+  
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #888;
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+// End scrollbar styling
