--- a/styles.css
+++ b/styles.css
@@ -36,25 +36,18 @@ hr {
 }
 .dark-theme-button {
   display: flex;
-  position: fixed;
-  bottom: 20px;
-  right: 30px;
-  z-index: 99;
   border: none;
   outline: none;
-  background-color: #ea86ae;
-  color: white;
-  opacity: 0.5;
   cursor: pointer;
-  border-radius: 10px;
-  font-size: 50px;
-  width: 50px;
-  height: 50px;
-  line-height: 52px;
+  font-size: 20px;
   justify-content: center;
   align-items: center;
+  border-bottom: dotted 1.5px;
 }
 .dark-theme-button img {
+  height: 20px;
+}
+.dark-theme-button.dark img {
   filter: invert(1);
 }
 .dark-theme-button:hover {
@@ -123,8 +116,21 @@ hr {
 }
 .card.dark,
 .modal .dark.content {
+  border-top: 2px solid red;
   background-color: #202020;
   color: white;
+}
+.card.dark .tag,
+.modal .dark.content .tag {
+  background-color: red;
+}
+.card.dark .repo-link,
+.modal .dark.content .repo-link {
+  color: #00ffff;
+}
+.card.dark .demo-link,
+.modal .dark.content .demo-link {
+  color: #39ff14;
 }
 .modal {
   display: none;
@@ -242,7 +248,7 @@ hr {
   }
 }
 a {
-  color: #606060;
+  color: black;
   text-decoration: none;
   border-bottom: dotted 1.5px;
 }
