--- a/styles.scss
+++ b/styles.scss
@@ -61,24 +61,20 @@ hr {
 // Custom element styling
 .dark-theme-button {
     display: flex;
-    position: fixed; 
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
     border: none;
     outline: none;
-    background-color: $pink;
-    color: white;
-    opacity: 0.5;
     cursor: pointer;
-    border-radius: 10px;
-    font-size: 50px;
-    width: 50px;
-    height: 50px;
-    line-height: 52px;
+    font-size: 20px;
     justify-content: center;
     align-items: center;
+    border-bottom: dotted 1.5px;
 
+    img {
+        height: 20px;
+    }
+}
+
+.dark-theme-button.dark {
     img {
         filter: invert(1);
     }
@@ -155,8 +151,21 @@ hr {
 }
 
 .card.dark {
+    border-top: 2px solid red;
     background-color: $dark-black;
     color: white;
+
+    .tag {
+        background-color: red;
+    }
+
+    .repo-link {
+        color: #00ffff;
+    }
+
+    .demo-link {
+        color: #39ff14;
+    }
 }
 
 .modal {
@@ -290,7 +299,7 @@ hr {
 
 // Font styling
 a {
-    color: $dark-grey;
+    color: black;
     text-decoration: none; 
     border-bottom: dotted 1.5px;
 }
