--- a/styles.css
+++ b/styles.css
@@ -60,6 +60,7 @@ hr {
 .profile .links-container {
   display: flex;
   justify-content: space-evenly;
+  flex-wrap: wrap;
   max-width: 100vw;
   font-size: 20px;
 }
