--- a/styles.scss
+++ b/styles.scss
@@ -93,6 +93,7 @@ hr {
     .links-container {
         display: flex;
         justify-content: space-evenly;
+        flex-wrap: wrap;
         max-width: 100vw;
         font-size: 20px;
     }
