Add title and links to modals

--- a/styles.css
+++ b/styles.css
@@ -157,6 +157,12 @@ hr {
   transform: none;
   cursor: auto;
 }
+.modal .tags {
+  display: none;
+}
+.modal ul {
+  display: none;
+}
 .modal .close {
   float: right;
   font-size: 28px;
