--- a/styles.scss
+++ b/styles.scss
@@ -197,6 +197,14 @@ hr {
         cursor: auto;
     }
 
+    .tags {
+        display: none;
+    }
+
+    ul {
+        display: none;
+    }
+
     .close {
         float: right;
         font-size: 28px;
