--- a/styles.css
+++ b/styles.css
@@ -235,7 +235,7 @@ hr {
   .two-column .modal .content,
   .modal .two-column .content {
     align-items: center;
-    height: 490px;
+    height: 525px;
     grid-row: auto;
     margin-top: 0.25vh;
     position: relative;
@@ -247,7 +247,7 @@ hr {
     margin: auto;
     margin-top: 2vh;
     max-width: 100%;
-    height: 280px;
+    max-height: 325px;
   }
   .two-column .card .tags,
   .two-column .modal .content .tags,
