--- a/styles.scss
+++ b/styles.scss
@@ -287,7 +287,7 @@ hr {
 
         .card {
             align-items: center;
-            height: 490px;
+            height: 525px;
             grid-row: auto;
             margin-top: 0.25vh;
             position: relative;
@@ -297,7 +297,7 @@ hr {
                 margin: auto;
                 margin-top: 2vh;
                 max-width: 100%;
-                height: 280px;
+                max-height: 325px;
             }
 
             .tags {
