--- a/styles.scss
+++ b/styles.scss
@@ -229,6 +229,10 @@ hr {
         cursor: pointer;
     }
 }
+
+#extracurriculars {
+    margin-top: 2vh;
+}
  
 @media (min-width: $tablet-breakpoint) {
     .container {
@@ -241,6 +245,10 @@ hr {
         transition: box-shadow 0.3s ease-in-out;
     }
 
+    #extracurriculars {
+        margin-top: 3.25vh;
+    }
+
     .single-column {
         .card {
             display: grid;
@@ -249,6 +257,7 @@ hr {
             grid-template-rows: 1fr 1fr 1fr;
             grid-template-columns: 1fr 9fr;
             padding: 1%;
+            margin-top: 0;
         }
 
         .image-container {
