--- a/styles.scss
+++ b/styles.scss
@@ -321,7 +321,11 @@ hr {
                 position: absolute;
                 bottom: 3vh;
             }
-        }    
+        }
+
+        .card.half-height {
+            height: 200px;
+        }
     }
 }
 // End custom element styling
