Change cards to automatically size itself

--- a/styles.css
+++ b/styles.css
@@ -243,7 +243,8 @@ hr {
   .two-column .modal .content,
   .modal .two-column .content {
     align-items: center;
-    height: 525px;
+    height: auto;
+    padding-bottom: 10vh;
     grid-row: auto;
     margin-top: 0.25vh;
     position: relative;
