Shrink margins as screen size shrinks

--- a/styles.css
+++ b/styles.css
@@ -182,7 +182,7 @@ hr {
 @media (min-width: 1080px) {
   .container {
     margin: auto;
-    max-width: 75%;
+    width: 972px;
   }
   .card:hover,
   .modal .content:hover {
