--- a/styles.scss
+++ b/styles.scss
@@ -236,7 +236,7 @@ hr {
 @media (min-width: $tablet-breakpoint) {
     .container {
         margin: auto;
-        width: $tablet-breakpoint;
+        width: 0.98 * $tablet-breakpoint;
     }
 
     .card:hover {
