--- a/styles.scss
+++ b/styles.scss
@@ -13,6 +13,9 @@ $green: #5fc383;
 $light-black: #11131f;
 $dark-black: #202020;
 $smoke: #A9A9A9;
+$dark-red: #a01300;
+$light-blue: #00ebeb;
+$light-green: #3ff61d;
 
 // Tag styling
 body {
@@ -23,7 +26,7 @@ body {
 
 body.dark {
     background-color: $light-black;
-    color: white;
+    color: $off-white;
 }
 
 header {
@@ -182,12 +185,17 @@ hr {
         background-color: red;
     }
 
+    .tag:hover {
+        background-color: $dark-red;
+        transition: background-color 0.5s ease-out;
+    }
+
     .repo-link {
-        color: #00ffff;
+        color: $light-blue;
     }
 
     .demo-link {
-        color: #39ff14;
+        color: $light-green;
     }
 }
 
